--- a/client/index.html
+++ b/client/index.html
@@ -1,6 +1,25 @@
 <html>
 	<head>
 		<title>Express Match</title>
+		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
+		<script>
+            window.fbAsyncInit = function() {
+                // EXpress Match - Test App FB Analytics
+                FB.init({
+                    appId      : '1855419587880428',
+                    xfbml      : true,
+                    version    : 'v3.1'
+                });
+                FB.AppEvents.logPageView();
+            };
+            (function(d, s, id){
+                var js, fjs = d.getElementsByTagName(s)[0];
+                if (d.getElementById(id)) {return;}
+                js = d.createElement(s); js.id = id;
+                js.src = "https://connect.facebook.net/en_US/sdk.js";
+                fjs.parentNode.insertBefore(js, fjs);
+            }(document, 'script', 'facebook-jssdk'));
+		</script>
 	</head>
 	<body>
 		<div id='app' />
