Profile Page, Post creation, likes, Google Places implementation

--- a/client/index.html
+++ b/client/index.html
@@ -24,5 +24,6 @@
 	<body>
 		<div id='app' />
 	</body>
+	<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDZ7qiS-QnVLUAMSt642QaeyFueehB7TNQ&libraries=places"></script>
 	<script src='em.bundle.js'></script>
 </html>
