Adding getPost API, changing Posts page organization of posts and filters, impl. copy link

--- a/client/index.html
+++ b/client/index.html
@@ -25,5 +25,5 @@
 		<div id='app' />
 	</body>
 	<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDZ7qiS-QnVLUAMSt642QaeyFueehB7TNQ&libraries=places"></script>
-	<script src='em.bundle.js'></script>
+	<script type="text/javascript" src='/em.bundle.js'></script>
 </html>
