--- a/client/index.html
+++ b/client/index.html
@@ -1,10 +1,10 @@
 <html>
 	<head>
-		<title>Express Match</title>
+		<title>Express To Match</title>
 		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 		<script>
             window.fbAsyncInit = function() {
-                // EXpress Match - Test App FB Analytics
+                // Express To Match - Test App FB Analytics
                 FB.init({
                     appId      : '1855419587880428',
                     xfbml      : true,
