--- a/client/index.html
+++ b/client/index.html
@@ -1,6 +1,7 @@
 <html>
 	<head>
 		<title>Express To Match</title>
+		<link rel="stylesheet" href="main.css"/>
 		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 		<script>
             window.fbAsyncInit = function() {
@@ -25,5 +26,5 @@
 		<div id='app' />
 	</body>
 	<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDZ7qiS-QnVLUAMSt642QaeyFueehB7TNQ&libraries=places"></script>
-	<script type="text/javascript" src='/em.bundle.js'></script>
+	<script type="text/javascript" src='em.bundle.js'></script>
 </html>
