--- a/client/index.html
+++ b/client/index.html
@@ -1,6 +1,8 @@
 <html>
 	<head>
 		<title>Express To Match</title>
+		<meta name="viewport" content="width=821" />
+		<!--<meta name="viewport" content="width=device-width, initial-scale=0.41, maximum-scale=1" />-->
 		<link rel="stylesheet" href="/main.css"/>
 		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
 		<script>
