--- a/server/index.html
+++ b/server/index.html
@@ -1,7 +1,7 @@
 <html>
 <head>
     <title>Express To Match</title>
-    <meta name="viewport" content="width=821" />
+    <meta name="viewport" content="width=821, maximum-scale=1" />
     <!--<meta name="viewport" content="width=device-width, initial-scale=0.41, maximum-scale=1" />-->
     <link rel="stylesheet" href="/public/dist/main.css"/>
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
