--- a/client/index.html
+++ b/client/index.html
@@ -1,7 +1,11 @@
 <html>
 	<head>
-		<title>Express To Match</title>
+		<title>Express To Match - Find love anonymously</title>
+		<meta name="title" content="Express To Match - Find love anonymously" />
+		<meta name="description" content ="Find love using Express To match, anonymously" />
 		<meta name="viewport" content="width=821, maximum-scale=1" />
+		<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+		<meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1" />
 		<!--<meta name="viewport" content="width=device-width, initial-scale=0.41, maximum-scale=1" />-->
 		<link rel="stylesheet" href="/main.css"/>
 		<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.3.1/css/all.css" integrity="sha384-mzrmE5qonljUremFsqc01SB46JvROS7bZs3IO2EmfFsd15uHvIt+Y8vEf7N7fWAU" crossorigin="anonymous">
