--- a/server/index.html
+++ b/server/index.html
@@ -1,6 +1,11 @@
 <html>
 <head>
-    <title>Express To Match</title>
+    <title>Express To Match - Find love anonymously</title>
+    <meta name="title" content="Express To Match - Find love anonymously" />
+    <meta name="description" content ="Find love using Express To match, anonymously" />
+    <meta name="viewport" content="width=821, maximum-scale=1" />
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1" />
     <meta name="viewport" content="width=821, maximum-scale=1" />
     <!--<meta name="viewport" content="width=device-width, initial-scale=0.41, maximum-scale=1" />-->
     <link rel="stylesheet" href="/public/dist/main.css"/>
