Adding preference window for user settings and preferences .

--- a/server/emailtemplates/template.html
+++ b/server/emailtemplates/template.html
@@ -101,7 +101,7 @@
                                 <td mc:edit="text104" align="center" class="text_color_242a33 center_content" style="color:#ffffff; word-spacing:5px; line-height:25px; font-size:33px; font-weight:700; font-family:'Lato', 'Open Sans', verdana, Helvetica, sans-serif; mso-line-height-rule: exactly;">
                                     <div class="editable-text">
 										<span class="text_container">
-											An improved hosting experience
+											Find love, anonymously.
 										</span>
                                     </div>
                                 </td>
@@ -211,7 +211,7 @@
                                 <td mc:edit="text104" align="center" class="text_color_242a33 center_content" style="color:#565a5c; letter-spacing:; line-height:23px; font-size:22px; font-weight:700; font-family:'Lato', 'Open Sans', verdana, Helvetica, sans-serif; mso-line-height-rule: exactly;">
                                     <div class="editable-text">
 										<span class="text_container">
-											What's new with Instant Book
+											Features of Express To Match
 										</span>
                                     </div>
                                 </td>
@@ -266,7 +266,7 @@
                                             <td mc:edit="text202" align="center" class="text_color_b7b7b7" style="color: #4C4C4C; text-align:left; padding-left:9px; font-size:17px;  font-weight:600; font-family: 'Open Sans', Helvetica, sans-serif; mso-line-height-rule: exactly;">
                                                 <div class="editable-text" style="line-height:23px;">
 													<span class="text_container">
-														Guests agree to your rules
+														Anonymous Proposals
 													</span>
 
                                                 </div>
@@ -278,7 +278,7 @@
                                             <td mc:edit="text202" align="center" class="text_color_b7b7b7" style="color: #4C4C4C; text-align:left; padding-left:9px; font-size: 15px;line-height: 1.6; font-weight: 400; font-family: 'Open Sans', Helvetica, sans-serif; mso-line-height-rule: exactly;">
                                                 <div class="editable-text" style="line-height:23px;">
 													<span class="text_container">
-														Guests see and agree to your house rules before booking.
+                                                        Create anonymous posts and secretly know who is interested.
 													</span>
 
                                                 </div>
@@ -336,7 +336,7 @@
                                             <td mc:edit="text202" align="center" class="text_color_b7b7b7" style="color: #4C4C4C; text-align:left; padding-left:9px; font-size:17px;  font-weight:600; font-family: 'Open Sans', Helvetica, sans-serif; mso-line-height-rule: exactly;">
                                                 <div class="editable-text" style="line-height:23px;">
 													<span class="text_container">
-														You choose the timing
+                                                        Comments and Discussions
 													</span>
 
                                                 </div>
@@ -348,9 +348,7 @@
                                             <td mc:edit="text202" align="center" class="text_color_b7b7b7" style="color: #4C4C4C; text-align:left; padding-left:9px; font-size: 15px;line-height: 1.6; font-weight: 400; font-family: 'Open Sans', Helvetica, sans-serif; mso-line-height-rule: exactly;">
                                                 <div class="editable-text" style="line-height:23px;">
 													<span class="text_container">
-														Set minimum night and seasonal requirements,
-														lead time, and gap days between bookings.
-														Even pick check-in cutoff times for same-day requests.
+														Participate in proposal comments and discussions to increase your popularity and the likelihood of getting more interest requests from other users of Express To Match.
 													</span>
 
                                                 </div>
@@ -408,7 +406,7 @@
                                             <td mc:edit="text202" align="center" class="text_color_b7b7b7" style="color: #4C4C4C; text-align:left; padding-left:9px; font-size:17px;  font-weight:600; font-family: 'Open Sans', Helvetica, sans-serif; mso-line-height-rule: exactly;">
                                                 <div class="editable-text" style="line-height:23px;">
 													<span class="text_container">
-														Calendar sync is fine-tuned
+														Messaging
 													</span>
 
                                                 </div>
@@ -420,8 +418,7 @@
                                             <td mc:edit="text202" align="center" class="text_color_b7b7b7" style="color: #4C4C4C; text-align:left; padding-left:9px; font-size: 15px;line-height: 1.6; font-weight: 400; font-family: 'Open Sans', Helvetica, sans-serif; mso-line-height-rule: exactly;">
                                                 <div class="editable-text" style="line-height:23px;">
 													<span class="text_container">
-														Improved calendar sync makes it easy to keep availability
-														accurate. Never worry about double bookings.
+														Power in your hands to accept or reject requests to connect.
 													</span>
 
                                                 </div>
@@ -515,7 +512,7 @@
                                                         <td mc:edit="text511" align="center" class="text_color_90a4ae" style="color: #808181; font-size: 17px; font-style: normal;line-height: 1.5;font-weight: 400; font-family: 'Open Sans', Helvetica, sans-serif; mso-line-height-rule: exactly;">
                                                             <div class="editable-text" style="line-height: 1.5;">
 																	<span class="text_container">
-																		 The Airbnb Team
+																		 Express To Match
 																	</span>
                                                             </div>
                                                         </td>
